--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -27,9 +27,9 @@ scrape_configs:
 
     static_configs:
       - targets: ['localhost:9090']
-  - job_name: 'web01' 
+  - job_name: 'web' 
     static_configs:
-      - targets: ['web01:9100']
-  - job_name: 'web02' 
+      - targets: ['web:9100']
+  - job_name: 'db' 
     static_configs:
-      - targets: ['web02:9100']
+      - targets: ['db:9100']
