--- a/box/Dockerfile
+++ b/box/Dockerfile
@@ -1,7 +1,9 @@
 FROM ubuntu:16.04
 ENV term xterm
 RUN apt-get update
-RUN yes | apt-get install apt-utils 
-RUN apt-get install net-tools
-RUN yes | apt-get install curl
-RUN apt-get install wget
+RUN apt-get install -y apt-utils 
+RUN apt-get install -y net-tools
+RUN apt update
+RUN apt-get install -y --fix-missing curl
+RUN apt-get install -y wget
+RUN apt-get install -y vim 
